--- a/portfolio.css
+++ b/portfolio.css
@@ -550,3 +550,43 @@ html, body {
   font-style: normal;
   font-weight: 400;
 }
+
+#work-container{
+  background-image: url(background2.png);
+  background-repeat:no-repeat;
+
+  background-size:cover;
+  min-height: 100%;
+}
+
+.images {
+  width: 100%;
+  text-align: center;
+  margin-top: 50px;
+}
+.workImg {
+  padding:30px;
+  display: inline-block;
+/*    position:absolute;*/
+  text-align: center;
+  vertical-align: middle;
+  line-height: 90px; 
+  font-family:garamond;
+  opacity: 0.7;
+}
+
+
+#beer {
+  width: 250px;
+  height: 200px;
+}
+
+#unichat {
+  width:200px;
+  height:250px;
+}
+
+#meetingplanner {
+  width: 300px;
+  height: 200px;
+}
