--- a/portfolio.css
+++ b/portfolio.css
@@ -590,3 +590,23 @@ html, body {
   width: 300px;
   height: 200px;
 }
+
+#maps {
+  width: 350px;
+  height: 200px;
+}
+
+#kthres {
+  width: 300px;
+  height: 200px;
+}
+
+#iris {
+  width: 250px;
+  height: 150px;
+}
+
+#stroller {
+  width:350px;
+  height: 150px;
+}
