--- a/portfolio.css
+++ b/portfolio.css
@@ -573,8 +573,21 @@ html, body {
   line-height: 90px; 
   font-family:garamond;
   opacity: 0.7;
+  position: relative;
 }
 
+.workImg > p {
+  position: absolute;
+}
+
+.workImg > img {
+  width:100%;
+  height:100%;
+}
+
+.workImg:hover {
+  opacity: 0.2
+}
 
 #beer {
   width: 250px;
