--- a/portfolio.css
+++ b/portfolio.css
@@ -294,7 +294,7 @@ html, body {
 	vertical-align: middle;
 	line-height: 90px; 
 	font-family:garamond;
-  color:purple;
+  color:black;
 
 }
 
@@ -535,7 +535,7 @@ html, body {
 		height: 200px;
 		line-height: 190px;
 		margin-bottom: 40px;
-    color:purple;
+    color:black;
 	}
 
 	.start-text {
