--- a/portfolio.css
+++ b/portfolio.css
@@ -225,9 +225,12 @@ html, body {
 
 /*Heading page styling*/
 .header-img {
-	width:100px;
+	width:150px;
+  height: 150px;
 	border-radius: 100%;
 	display: inline-block;
+  background-image: url(cv.jpg);
+  background-size: cover;
 }
 
 .header-text {
@@ -269,10 +272,11 @@ html, body {
 
 .outerH-container, .start-logo {
 /*	height:100%;*/
-	background-image: url(background.png);
+	background-image: url(background2.png);
 	background-repeat:no-repeat;
 
    background-size:cover;
+
    height: 100%;
 }
 
@@ -285,16 +289,17 @@ html, body {
 
 #c1, #c2, #c3 {
 	width: 100px;
-    border:1px solid black;
-    height: 100px;
-    border-radius: 100%;
-    display: inline-block;
+  border:1px solid black;
+  height: 100px;
+  border-radius: 100%;
+  display: inline-block;
 /*    position:absolute;*/
-    text-align: center;
+  text-align: center;
 	vertical-align: middle;
 	line-height: 90px; 
 	font-family:garamond;
   color:black;
+  text-decoration:none;  
 
 }
 
@@ -320,13 +325,17 @@ html, body {
   animation: 0.3s ease-out 0s 1 slideUp2 forwards;
 }
 
+.circles a{
+    text-decoration:none;  
+    color:black;
+}
 
-#c1:hover , #c2:hover, #c3:hover{
-  color: white;
+#c1:hover , #c2:hover, #c3:hover {
   border-color: transparent;
   background: rgba(0, 179, 134, 0.5);
   animation: hoorai cubic-bezier(0.18, 0.14, 0.29, 1) 1s;
   animation-fill-mode: forwards;
+  color: white;
 }
 
 
@@ -541,8 +550,14 @@ html, body {
 		height: 100px;
 		line-height: 100px;
 		margin-bottom: 40px;
-    color:black;
+    background-color:rgba(0, 179, 134, 0.5);
+    border:none;
+    color: white;
 	}
+
+  .circles a{
+        text-decoration:none;  
+  }
 
 	.start-text {
 		font-size: 80px;
